added more events and org

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -3,6 +3,8 @@
 
 <head>
   <% include ./partials/head %>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier/1.0.3/oms.js"></script>
+  <script src="../assets/js/markerclusterer.js"></script>
   <script src="../assets/js/map.js"></script>
 </head>
 
